--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,41 @@ img {
   display: block;
   max-width: 100%;
 }
+
+button {
+  padding: 10px 20px;
+  font-size: 20px;
+  text-transform: uppercase;
+  margin: 5px;
+  cursor: pointer;
+}
+
+button:disabled {
+  cursor: not-allowed;
+}
+
+.timer {
+  display: flex;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 5px;
+}
+
+.value {
+  font-size: 32px;
+  font-weight: 500;
+}
+
+.label {
+  font-size: 20px;
+  text-transform: uppercase;
+}
+
+#datetime-picker {
+  padding: 10px;
+  font-size: 20px;
+}
